--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://DanilWeda.github.io/nameofrepo",
+	"homepage": "https://DanilWeda.github.io/goit-react-hw-02-feedback",
 	"name": "goit-react-hw-01-components",
 	"version": "0.1.0",
 	"private": true,
